# c_machine_learning

./: CMakeLists.txt  README.md
c_source/: lib_ml_basics.c  lib_ml_basics.h  log.c  log.h
source/: library.c  library.h
test/: smoke_test.c
